@@ -1211,123 +1211,6 @@ block|}
 block|}
 block|}
 end_class
-begin_class
-DECL|class|TermStats
-specifier|final
-class|class
-name|TermStats
-block|{
-DECL|field|termtext
-name|BytesRef
-name|termtext
-decl_stmt|;
-DECL|field|field
-name|String
-name|field
-decl_stmt|;
-DECL|field|docFreq
-name|int
-name|docFreq
-decl_stmt|;
-DECL|field|totalTermFreq
-name|long
-name|totalTermFreq
-decl_stmt|;
-DECL|method|TermStats
-name|TermStats
-parameter_list|(
-name|String
-name|field
-parameter_list|,
-name|BytesRef
-name|termtext
-parameter_list|,
-name|int
-name|df
-parameter_list|)
-block|{
-name|this
-operator|.
-name|termtext
-operator|=
-operator|new
-name|BytesRef
-argument_list|(
-name|termtext
-argument_list|)
-expr_stmt|;
-name|this
-operator|.
-name|field
-operator|=
-name|field
-expr_stmt|;
-name|this
-operator|.
-name|docFreq
-operator|=
-name|df
-expr_stmt|;
-block|}
-DECL|method|TermStats
-name|TermStats
-parameter_list|(
-name|String
-name|field
-parameter_list|,
-name|BytesRef
-name|termtext
-parameter_list|,
-name|int
-name|df
-parameter_list|,
-name|long
-name|tf
-parameter_list|)
-block|{
-name|this
-operator|.
-name|termtext
-operator|=
-operator|new
-name|BytesRef
-argument_list|(
-name|termtext
-argument_list|)
-expr_stmt|;
-name|this
-operator|.
-name|field
-operator|=
-name|field
-expr_stmt|;
-name|this
-operator|.
-name|docFreq
-operator|=
-name|df
-expr_stmt|;
-name|this
-operator|.
-name|totalTermFreq
-operator|=
-name|tf
-expr_stmt|;
-block|}
-DECL|method|getTermText
-name|String
-name|getTermText
-parameter_list|()
-block|{
-return|return
-name|termtext
-operator|.
-name|utf8ToString
-argument_list|()
-return|;
-block|}
-block|}
-end_class
 begin_comment
 comment|/**  * Priority queue for TermStats objects ordered by docFreq  **/
 end_comment
